various fixes (#81)
- fix clickable link not being passed through bug
- make lesson card images bigger, crop to 16:9 since youtube provides 4:3 with letterboxes
- fix date not showing bug in lesson card
- various css tweaks
- fix patrons component. react-hooks lint issue, other tweaks
- change pi creatures to be on right by default to lesson likelihood of being overlapped by table of contents
- make question component explanation param optional
- fix small pixel bug with table of contents where clicking on an entry doesn't scroll it far enough into view to make it active
- greatly reduce screen width breakpoint of table of contents showing up automatically
- fix misuse bug of seedrandom

--- a/components/LessonGallery/index.module.scss
+++ b/components/LessonGallery/index.module.scss
@@ -9,14 +9,6 @@
   text-decoration: none;
   z-index: 1;
 
-  &[data-open="true"] {
-    width: 100%;
-
-    i {
-      opacity: 1;
-    }
-  }
-
   &:hover {
     background: $light-blue-100;
 
@@ -26,8 +18,9 @@
   }
 
   img {
-    width: 240px;
-    height: 135px;
+    $width: 300px;
+    width: $width;
+    height: $width * 9 / 16;
   }
 
   i {
@@ -37,6 +30,14 @@
     color: $light-blue-500;
     opacity: 0;
     transition: opacity $fast;
+  }
+
+  &[data-open="true"] {
+    width: 100%;
+
+    i {
+      opacity: 1;
+    }
   }
 }
 
